# reactmap-android

./: .gitignore  LICENSE  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.circleci/: config.yml
.github/workflows/: ci.yml  codeql.yml
app/: build.gradle.kts  google-services.json
app/src/androidTest/res/raw/: vendor.js
app/src/debug/: AndroidManifest.xml
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/res/drawable/: ic_device_splitscreen.xml  ic_family_link.xml  ic_file_cloud.xml  ic_image_bedtime.xml  ic_image_wb_sunny.xml  ic_maps_directions_car.xml  ic_mist.xml  ic_partly_cloudy_day.xml  ic_partly_cloudy_night.xml  ic_places_ac_unit.xml  ic_places_beach_access.xml  ic_rainy.xml  ic_shortcut_splitscreen.xml  switch_thumb_icon.xml
app/src/main/res/layout/: dialog_accuweather.xml  dialog_config.xml  layout_car.xml  layout_main.xml
app/src/main/res/raw/: keep.xml  setup.js  setup_interceptor.js  setup_keyboard.js
app/src/main/res/values-af/: strings.xml
app/src/main/res/values-am/: strings.xml
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-as/: strings.xml
app/src/main/res/values-az/: strings.xml
app/src/main/res/values-b+es+419/: strings.xml
app/src/main/res/values-b+sr+Latn/: strings.xml
app/src/main/res/values-be/: strings.xml
app/src/main/res/values-bg/: strings.xml
app/src/main/res/values-bn/: strings.xml
app/src/main/res/values-bs/: strings.xml
gradle/: gradle-daemon-jvm.properties  libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+116 files in other folders)
